--- a/bicemodded/localisation/english/victory_points_l_english.yml
+++ b/bicemodded/localisation/english/victory_points_l_english.yml
@@ -3,7 +3,7 @@
  VICTORY_POINTS_6521:0 "Berlin"
  VICTORY_POINTS_692:0 "Munich"
  VICTORY_POINTS_11620:0 "Garmisch-Partenkirchen"
- VICTORY_POINTS_6469:0 "Duisburg & Düsseldorf"
+ VICTORY_POINTS_6469:0 "Düsseldorf"
  VICTORY_POINTS_9347:0 "Hamburg"
  VICTORY_POINTS_9570:0 "Breslau"
  VICTORY_POINTS_241:0 "Wilhelmshaven"
@@ -202,7 +202,7 @@
  VICTORY_POINTS_525:0 "Kiev"
  VICTORY_POINTS_3529:0 "Stalingrad"
  VICTORY_POINTS_3151:0 "Leningrad "Urban""
- VICTORY_POINTS_6474:0 "Stalino"
+ VICTORY_POINTS_6474:0 "Donetsk"
  VICTORY_POINTS_9417:0 "Rostov"
  VICTORY_POINTS_11375:0 "Gorki"
  VICTORY_POINTS_117:0 "Novgorod"
@@ -594,7 +594,7 @@
  VICTORY_POINTS_6318:0 "Manchester"
  VICTORY_POINTS_11405:0 "Zaporozhe"
  VICTORY_POINTS_11561:0 "Krivoi Rih"
- VICTORY_POINTS_9461:0 "Voroshilovgrad"
+ VICTORY_POINTS_9461:0 "Luhansk"
  VICTORY_POINTS_3734:0 "Krasnodar"
  VICTORY_POINTS_11349:0 "Rzhev"
  VICTORY_POINTS_8011:0 "Bangalore"
