--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -64,6 +64,8 @@
  
  interwar_antiair:0 "Anti-Air Machine Gun"
  
+ GER_reichswerke_ostdeutsch:0 "Reichswerke Ostdeutsch"
+ GER_reichswerke_ostdeutsch_desc:0 ""
  GER_rebuild_pol_mil:0 "Rebuild Military Instalations"
  GER_rebuild_pol_mil_desc:0 ""
  GER_rebuild_pol_civ:0 "Rebuild Civilian Infrastructure"
@@ -817,7 +819,7 @@
  GER_wunderwaffe:0 "Wunderwaffe"
  GER_wunderwaffe_desc:0 "Heisenberg and von Braun are chomping at the bit to explore certain ideas they have for true doomsday weapons. All they need is extra resources..."
  GER_air_commanders_tt:0 "You will receive a §Y4 Skill§! §GWar Hero§! and §GAirforce Background§! §CCorps Commander§! Albert Kesselring.\n and a §Y3 Skill§! §GArmor Officer§! and §GAirforce Background§! §CCorps Commander§! Geyr Von Schweppenburg.\n and a §Y4 Skill§! §GCommando§! and §GAirforce Background§! §CCorps Commander§! Kurt Student.\n"
- GER_mounaineer_commanders_tt:0 "You will receive a §Y4 Skill§! §GWar Hero§!, §GMountaineer§! and §GRanger§! §CCorps Commander§! Eduard Dietl.\n"
+ GER_mounaineer_commanders_tt:0 "You will receive a §Y3 Skill§! §GWar Hero§!, §GMountaineer§! and §GRanger§! §CCorps Commander§! Eduard Dietl.\n"
  GER_mol_rib_pact:0 "Molotov-Ribbentrop Pact"
  GER_mol_rib_pact_desc:0 "A treaty of friendship and non-aggression with the USSR might turn the stomach, but it will allow their precious oil to keep flowing into Germany. The secret addendum will divide the territories of Romania, Poland, Lithuania, Latvia, Estonia and Finland into German and Soviet spheres of influence..."
  GER_mol_rib_pact_tt:0 "Enter into a §Ynon-aggression pact§! with §YSoviet Union§! and agree to §Ydivide Poland§! between Soviet Union and Germany\n"
@@ -1079,6 +1081,8 @@
  GER_modernize_support:0 "Modernize Support Weaponry and Equipment"
  GER_modernize_support_desc:0 "Designed to be low-cost and easy to build, the MG 42 proved to be highly reliable and easy to operate. It is most notable for its very high rate of fire of 1,200 rounds per minute. This ability makes it extremely effective in providing suppresing fire. We need to realize these cheap ways of spewing swarms of rounds upon the enemy are the key to victory and develop new support weapons."
  fritsch_dead:0 "Fritsch Disposed"
+ GER_sturmgewehr:0 "Sturmgewehr"
+ GER_sturmgewehr_desc:0 "The Sturmgewehr(Assault Rifle) is the combination of bolt action full-sized rifle and submachine gun into one formidable and versatile weapon. If we can mass produce this to be the main infantry rifle it could have a massive impact on the battlefield!"
  GER_rocket_artillery:0 "Rocket Artillery"
  GER_rocket_artillery_desc:0 "Rocket artillery cannot usually match the accuracy and sustained rate of fire of conventional gun artillery. They may be capable of very destructive strikes by delivering a large mass of explosives simultaneously, thus increasing the shock effect and giving the target less time to take cover."
  GER_sturmgeschutz:0 "Sturmgeschütz"
@@ -2753,7 +2757,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  ENG_mechanized:0 "Bren Carrier"
  ENG_mechanized_desc:0 "Armored vehicles play an increasingly important role in the war. While slightly less intimidating than your average tank, they give us an edge in communication, command, transport and urban warfare."
  ENG_assault_rifle:0 "Assault Rifle Developement"
- ENG_assault_rifle_desc:0 ""
+ ENG_assault_rifle_desc:0 "The assault rifle is the combination of bolt action full-sized rifle and submachine gun into one formidable and versatile weapon. If we can mass produce this to be the main infantry rifle it could have a massive impact on the battlefield!"
  ENG_night_vision:0 "The Invisible Raiders"
  ENG_night_vision_desc:0 ""
  ENG_all_alliance_tt:0 "The effect activates for §Gall your faction members§!"
