--- a/bicemodded/localisation/english/state_names_l_english.yml
+++ b/bicemodded/localisation/english/state_names_l_english.yml
@@ -225,8 +225,8 @@
  STATE_224:0 "Bryansk"
  STATE_225:0 "Sumy"
  STATE_226:0 "Dnipropetrovsk"
- STATE_227:0 "Stalino"
- STATE_228:0 "Voroshilovgrad"
+ STATE_227:0 "Donets"
+ STATE_228:0 "Luhansk"
  STATE_229:1 "Azerbaijan"
  STATE_230:0 "Armenia"
  STATE_231:0 "Georgia"
