--- a/bicemodded/localisation/english/events_l_english.yml
+++ b/bicemodded/localisation/english/events_l_english.yml
@@ -4033,11 +4033,11 @@
  
  
  poland.90.t:0 "Poland devastated by war!"
- poland.90.d:0 ".."
+ poland.90.d:0 "The fighting in Poland has been rough after years of our propaganda have created such strong anti-polish sentiment within our armed forces. The occupation forces have looted every town which now lies in ruin throughout central and eastern Poland especially."
  poland.90.a:0 "Okay"
  
  poland.91.t:0 "Poland devastated by war!"
- poland.91.d:0 ".."
+ poland.91.d:0 "The fighting in Poland has been rough after years of our propaganda have created such strong anti-polish sentiment within our armed forces. The occupation forces have looted every town which now lies in ruin."
  
  czech.35.t:0 "Czechoslovakia Asks for Arms"
  czech.35.d:0 "Czechoslovakia, our indirect ally is asking for arms from our nation, we might want to give them arms at a cost of political efforts to keep the peace in europe."
