--- a/bicemodded/localisation/english/tank_modules_l_english.yml
+++ b/bicemodded/localisation/english/tank_modules_l_english.yml
@@ -1,3 +1,7 @@
 ﻿l_english:
+ DESIGNER_CHASSIS_BASE:0 "Chassis: "
+ DESIGNER_FROM_MODULES:0 "Modules: "
+ DESIGNER_UNSAVED_CHANGES:0 "Unsaved changes: "
+ EQUIPMENT_AMPHIBIOUS:0 "Amphibious Tank"
 
  ### EQUIPMENT MODULE ROLE PERMISSIONS ###
