.. ready for steam almosat

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -66,10 +66,12 @@
  
  GER_reichswerke_ostdeutsch:0 "Reichswerke Ostdeutsch"
  GER_reichswerke_ostdeutsch_desc:0 ""
- GER_rebuild_pol_mil:0 "Rebuild Military Instalations"
+ GER_rebuild_pol_mil:0 "Rebuild Military Infrastructure"
  GER_rebuild_pol_mil_desc:0 ""
  GER_rebuild_pol_civ:0 "Rebuild Civilian Infrastructure"
  GER_rebuild_pol_civ_desc:0 ""
+ GER_gestapo:0 "Einsatzgruppen"
+ GER_gestapo_desc:0 ""
  GER_aces_high:0 "German Aces"
  GER_aces_high_desc:0 "Just like during the Great War, we shall dominate the skies!"
  GER_airbases:0 "Lufthansa Expansion"
