--- a/bicemodded/localisation/english/ship_modules_l_english.yml
+++ b/bicemodded/localisation/english/ship_modules_l_english.yml
@@ -236,6 +236,8 @@
  ship_airplane_launcher_1_desc:0 "A simple airplane launcher propels a small scout plane into the air."
  ship_airplane_launcher_2:0 "Improved Floatplane Catapult"
  ship_airplane_launcher_2_desc:0 "An improved launch mechanism that allows the ship to launch a larger plane with greater range and speed."
+ ship_airplane_launcher_3:0 "Advanced Floatplane Catapult"
+ ship_airplane_launcher_3_desc:0 "An advanced launch design that allows the ship to launch a more modern airplanes that require higher take-off speeds."
  ship_no_deck_space:0 "Small Hangar and Deck"
  ship_no_deck_space_desc:0 "A smaller size will drastically reduce the cost of the ship although you cannot effectively fit more than four carriers in a naval battle..."
  ship_deck_space_1:0 "Large Hangar and Deck"
