--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -70,8 +70,8 @@
  GER_rebuild_pol_mil_desc:0 ""
  GER_rebuild_pol_civ:0 "Rebuild Civilian Infrastructure"
  GER_rebuild_pol_civ_desc:0 ""
- GER_gestapo:0 "Einsatzgruppen"
- GER_gestapo_desc:0 ""
+ GER_Gestapo:0 "Einsatzgruppen"
+ GER_Gestapo_desc:0 ""
  GER_aces_high:0 "German Aces"
  GER_aces_high_desc:0 "Just like during the Great War, we shall dominate the skies!"
  GER_airbases:0 "Lufthansa Expansion"
@@ -813,7 +813,7 @@
  GER_german_soviet_trade_agreement_tt:0 "§YWe will also gain some resources in Berlin in exchange for some technical know-how!§!"
  GER_prepare_to_invade_the_ussr:0 "Prepare to Invade the Soviet Union"
  GER_prepare_to_invade_the_ussr_desc:0 "We can focus our propaganda efforts on preparing the German people - and the world - for a righteous war on the Soviet Union. This will give us time to work out a cunning and masterful plan to strike deep into the vast lands of the Soviet Union. We also should build up our infrastructure in the new border regions!"
- GER_prepare_to_invade_the_ussr_tt:0 "Add two levels §YInfrastructure§! in §YMemel§!, §YKönigsberg§!, §YErmland-Masuren§!, §YDanzig§!, §YPlock§!,  §YLodz§!, §YWarszawa§!, §YLublin§!, §YKielce§!, and §YKrakow§!!"
+ GER_prepare_to_invade_the_ussr_tt:0 "Add one level of §YInfrastructure§! in §YMemel§!, §YKönigsberg§!, §YErmland-Masuren§!, §YDanzig§!, §YPlock§!, §YLublin§!, §YKielce§!, and §YKrakow§!!\n Add one level of §YAirbase§! in §YWarszawa§!"
  GER_soviet_treaty:0 "Treaty with the USSR"
  GER_soviet_treaty_desc:0 "We can pursue a new research treaty with the Soviet Union in order to develop, chiefly, better tanks. If they agree, we can reopen the tank school we closed down in Kama in 1933. Soviet cooperation will, of course, mean that they too will benefit from the innovations made..."
  GER_expand_peenemuende_research_center:0 "Expand the Peenemünde Research Center"
