railway arty focus

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -3329,6 +3329,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  artillery_bonus:0 "§YArtillery§! technologies bonus"
  heavy_artillery_bonus:0 "§YHeavy Artillery§! bonus"
  medium_artillery_bonus:0 "§YMedium Artillery§! bonus" 
+ rail_artillery_bonus:0 "§YRail Artillery§! bonus"
  air_doc_bonus:0 "§YAir doctrine§! bonus"
  air_doctrine_bonus:0 "§YAir doctrine§! bonus"
  sub_op_bonus:0 "§YSubmarine Operations Doctrine§! bonus"
