--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -1087,6 +1087,8 @@
  GER_sturmgewehr_desc:0 "The Sturmgewehr(Assault Rifle) is the combination of bolt action full-sized rifle and submachine gun into one formidable and versatile weapon. If we can mass produce this to be the main infantry rifle it could have a massive impact on the battlefield!"
  GER_rocket_artillery:0 "Rocket Artillery"
  GER_rocket_artillery_desc:0 "Rocket artillery cannot usually match the accuracy and sustained rate of fire of conventional gun artillery. They may be capable of very destructive strikes by delivering a large mass of explosives simultaneously, thus increasing the shock effect and giving the target less time to take cover."
+ GER_rail_artillery:0 "Schwere Gustav"
+ GER_rail_artillery_desc:0 " "
  GER_sturmgeschutz:0 "Sturmgeschütz"
  GER_sturmgeschutz_desc:0 "Sturmgeschütz (or StuG) meaning "assault gun" were a series of armored vehicles used by both the Wehrmacht and the Waffen-SS armored formations; which consisted primarily of the StuG III and StuG IV."
  GER_fast_light_tanks:0 "Schnelle Panzer"
