--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -1070,7 +1070,7 @@
  GER_bewegungskrieg_desc:0 "“Bewegungskrieg”, or “lightning war”, advocates the usage of highly-concentrated mobile firepower that can exploit breakthroughs and quickly conduct full combined arms operation deep into enemy territory. We should move to quickly adopt this revolutionary doctrine since the painful memories of sluggish trench warfare from the Weltkrieg are still fresh on the minds of our people and the Oberkommando der Wehrmacht."
  GER_auftragstaktik:0 "Auftragstaktik"
  GER_auftragstaktik_desc:0 "Heinz Guderian and other radical theorists are pushing for daring new doctrines emphasizing communication, identification of 'schwerpunkte' and local concentrations of combined arms forces. Giving them free reins might help avoid the meat grinder horrors of the Great War."
- GER_befehlstaktik:0 "Befehlstaktik"
+ GER_befehlstaktik:0 "Ritter von Leeb"
  GER_befehlstaktik_desc:0 ""
  GER_gebirgs:0 "Gebirgsjäger"
  GER_gebirgs_desc:0 "Gebirgsjäger are the light infantry part of the alpine or mountain troops of Germany, Austria and Switzerland."
