bugfixes new german focus:pocket bbs

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -960,9 +960,12 @@
  listen_to_donitz:0 "Listen to Dönitz Advise"
  listen_to_raeder:0 "Listen to Raeders Advise"
  listen_to_both:0 "Listen to Both"
+ GER_pocket_bbs:0 "Order new pocket battleships"
+ GER_pocket_bbs_desc:0 "The pocket battlships, also called panzer ships are a type of middle ground between a heavy cruiser and a battle cruiser that we build to fit the london navy treaty of max 10,000 tons. In reality these ships tip the scale at 15,000 tons and with the lack of protest from the western powers we can try another set with bigger main guns upping the weight to 17,000. We need to lay down the hulls quickly as we have the know-how to build these with the recent completion of the first batch."
+ GER_pocket_bbs_tt:0 "Adds three Moltke Class 'Panzerschiff' §YHeavy Cruisers§! to the production queue at §Y25%§! completion."
  GER_bismarck:0 "Bismarck"
  GER_bismarck_desc:0 "We need to lay down the Bismarck Class battleships based on our latest design."
- GER_bismarck_tt:0 "Adds two Bismarck-Class §YBattleships§! to the production queue, at §Y20%§! and §Y10% Completion§!, respectively."
+ GER_bismarck_tt:0 "Adds two Bismarck-Class §YBattleships§! to the production queue, at §Y20%§! and §Y10%§! completion, respectively."
  expanded_dockyards:0 "Expanded Dockyards"
  GER_build_u_boat_bunker:0 "U-Boat Bunker"
  GER_build_u_boat_bunker_desc:0 "We need to protect our U-boat production and when they are in port for repairs or supply from enemy bombing! So we should build protection in the form of anti-air and bunkers!"
