--- a/bicemodded/localisation/english/bftb_events_l_english.yml
+++ b/bicemodded/localisation/english/bftb_events_l_english.yml
@@ -921,7 +921,7 @@
  bftb_turkey.119.desc:0 "Our policy of transparent dialogue and dedicated community outreach has paid off in spades in [TUR_fundamentalist_state.GetName]. The radicals have left the state, having been driven out by the local population in a fantastic victory for our government. \n\nThe people of [TUR_fundamentalist_state.GetName] maintain their religious character, but in our discourse with community leaders we have gleaned that our citizens no longer find government principles to be intrinsically at odd with their beliefs. In [TUR_fundamentalist_state.GetName], we see what the future of [ROOT.GetAdjective] unity shall look like."
  bftb_turkey.119.a:0 "Your cooperation is appreciated."
 
- bftb_turkey.126.t:0 "[FROM.GetNameDefCap] Deliver an Investment Portfolio"
+ bftb_turkey.126.t:0 "[FROM.GetNameDefCap] Delivers an Investment Portfolio"
  bftb_turkey.126.desc:0 "Representatives from [FROM.GetNameDef] have visited our country and met with many of our politicians in the hopes of garnering endorsements for their investment scheme. The government of [FROM.GetNameDef] would like for us to use our resources to better their own industrial capabilities and output. [FROM.GetAdjective] officials have inferred that by assisting their nation, we might be able to expect aid of our own in the future in the form of a military alliance between our nations."
  bftb_turkey.126.a:0 "If it is aid they need, then it is aid they shall have."
  bftb_turkey.126.b:0 "We shall not sign their Faustian bargain."
