--- a/bicemodded/localisation/english/state_names_l_english.yml
+++ b/bicemodded/localisation/english/state_names_l_english.yml
@@ -37,7 +37,7 @@
  STATE_36:0 "Friesland"
  STATE_37:0 "Sjaelland"
  STATE_38:0 "Norrland"
- STATE_39:0 "Alto Adige & Trentino"
+ STATE_39:0 "South Tyrol"
  STATE_40:1 "Altai Krai"  #Was called Barnaul, as the city in the region
  STATE_41:0 "Madrid"
  STATE_42:0 "Moselland"
@@ -151,16 +151,16 @@
  STATE_150:0 "Savo"
  STATE_151:0 "Eastern Switzerland"
  STATE_152:0 "Upper Austria"
- STATE_153:0 "Tirol"
+ STATE_153:0 "Tyrol"
  STATE_154:0 "Alföld"
  STATE_155:0 "Transdanubia"
  STATE_156:0 "Calabria"
  STATE_157:0 "Abruzzo"
- STATE_158:0 "Piemonte"
- STATE_159:0 "Lombardia"
+ STATE_158:0 "Piedmont"
+ STATE_159:0 "Lombardy"
  STATE_160:0 "Veneto"
  STATE_161:0 "Emilia Romagna"
- STATE_162:0 "Toscana"
+ STATE_162:0 "Tuscany"
  STATE_163:0 "Zara"
  STATE_164:0 "Dodecanese"
  STATE_165:1 "Cataluña"
