--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -1070,7 +1070,7 @@
  GER_bewegungskrieg_desc:0 "“Bewegungskrieg”, or “lightning war”, advocates the usage of highly-concentrated mobile firepower that can exploit breakthroughs and quickly conduct full combined arms operation deep into enemy territory. We should move to quickly adopt this revolutionary doctrine since the painful memories of sluggish trench warfare from the Weltkrieg are still fresh on the minds of our people and the Oberkommando der Wehrmacht."
  GER_auftragstaktik:0 "Auftragstaktik"
  GER_auftragstaktik_desc:0 "Heinz Guderian and other radical theorists are pushing for daring new doctrines emphasizing communication, identification of 'schwerpunkte' and local concentrations of combined arms forces. Giving them free reins might help avoid the meat grinder horrors of the Great War."
- GER_befehlstaktik:0 "Ritter von Leeb"
+ GER_befehlstaktik:0 "Befehlstaktik"
  GER_befehlstaktik_desc:0 ""
  GER_gebirgs:0 "Gebirgsjäger"
  GER_gebirgs_desc:0 "Gebirgsjäger are the light infantry part of the alpine or mountain troops of Germany, Austria and Switzerland."
@@ -1108,8 +1108,8 @@
  GER_Panzer_division:0 "Panzer-Division"
  GER_Panzer_division_desc:0 "The old "Leichte Divisions" have proven too thin-skinned to do their jobs as armor, but not maneuverable enough to fully replace cavalry. The next generation of tanks must have tougher armor and more powerful armaments, even if there is a slight cost in speed."
  GER_Panzer_Division_1937_unit_tt:0 "Gain a template with §Y4 Light Armor§! and §Y2 Medium Armor§! and §Y5 Motorized§! and §Y1 Armored Car§!  and §Y2 Motorized Artillery§! and §Y1 Motorized Anti-Tank§! battalions.\n"
- GER_liecht_division:0 "Leichte Division"
- GER_liecht_division_desc:0 "In theory, it is possible for divisions with fast, lightly-armored vehicles to replace obsolete cavalry units. We just need to develop the required vehicles first..."
+ GER_leichte_division:0 "Leichte Division"
+ GER_leichte_division_desc:0 "In theory, it is possible for divisions with fast, lightly-armored vehicles to replace obsolete cavalry units. We just need to develop the required vehicles first..."
  GER_Leichte_Pz_Division_unit_tt:0 "Gain a fresh division with §Y4 Light Armor§!, §Y4 Motorized§!, §Y3 Motorized Artillery§! and §Y1 Motorized Anti-Tank§! battalions.\n"
  GER_Wehrmacht:0 "Wehrmacht"
  GER_Wehrmacht_desc:0 "The Treaty of Versailles once limited the German army to a mere 100,000 men, but we have covertly circumvented this limit for over a decade. In 1935, Hitler openly announced that the Reich would reintroduce conscription and quintuple the size of its army. To shed the memory of the weak Reichswehr of the Weimar period, this grand military force was christened with a new name - the Wehrmacht."
