--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -822,6 +822,7 @@
  GER_wunderwaffe_desc:0 "Heisenberg and von Braun are chomping at the bit to explore certain ideas they have for true doomsday weapons. All they need is extra resources..."
  GER_air_commanders_tt:0 "You will receive a §Y4 Skill§! §GWar Hero§! and §GAirforce Background§! §CCorps Commander§! Albert Kesselring.\n and a §Y3 Skill§! §GArmor Officer§! and §GAirforce Background§! §CCorps Commander§! Geyr Von Schweppenburg.\n and a §Y4 Skill§! §GCommando§! and §GAirforce Background§! §CCorps Commander§! Kurt Student.\n"
  GER_mounaineer_commanders_tt:0 "You will receive a §Y3 Skill§! §GWar Hero§!, §GMountaineer§! and §GRanger§! §CCorps Commander§! Eduard Dietl.\n"
+ GER_artillery_commanders_tt:0 "You will receive a §Y3 Skill§! §GBrilliant§!, §GArtillery Officer§! and §GEngineer§! §CCorps Commander§! Wilhelm von Leeb.\n"
  GER_mol_rib_pact:0 "Molotov-Ribbentrop Pact"
  GER_mol_rib_pact_desc:0 "A treaty of friendship and non-aggression with the USSR might turn the stomach, but it will allow their precious oil to keep flowing into Germany. The secret addendum will divide the territories of Romania, Poland, Lithuania, Latvia, Estonia and Finland into German and Soviet spheres of influence..."
  GER_mol_rib_pact_tt:0 "Enter into a §Ynon-aggression pact§! with §YSoviet Union§! and agree to §Ydivide Poland§! between Soviet Union and Germany\n"
@@ -7253,7 +7254,7 @@ HUN_garrison_units_tt:0 "Gain three green-horn 10-width §YGarrison§! detachmen
 HUN_garrisons:0 "Man the Posts"
 HUN_garisons_desc:0 "We can let irregulars form defensive border formations, that will surely be okay by now despite our strict treaty restrictions."
 HUN_fm_1_tt:0 "Gain a §Y3 Skill§! §GCavalry Officer§! and §GOffensive Doctrine§! §CField Marshal§! named §YElemer Gorondy-Novak§!.\n"
-HUN_fm_2_tt:0 "Gain a §Y3 Skill§! §GBearer of Artillery§! and §GCareer Officer§! §CField Marshal§! named §YFerenc Feketehalmy-Czeydner§!.\n"
+HUN_fm_2_tt:0 "Gain a §Y3 Skill§! §GArtillery Officer§! and §GCareer Officer§! §CField Marshal§! named §YFerenc Feketehalmy-Czeydner§!.\n"
 HUN_fortify_empire:0 "Fortify the new frontiers"
 HUN_fortify_empire_desc:0 "Rei"
 HUN_antiger:0 "Cut the Dependance on German Economy"
