--- a/bicemodded/localisation/english/nsb_ideas_l_english.yml
+++ b/bicemodded/localisation/english/nsb_ideas_l_english.yml
@@ -206,7 +206,7 @@
  superior_firepower_academy_spirit_tt:1 "§G50% chance§! that new officers are created with the §Y"Engineer Officer"§! trait."
  superior_firepower_academy_spirit_2:1 "Artillery Schools"
  superior_firepower_academy_spirit_2_desc:2 "Artillery is the king of the battlefield, has always been and will always be!\n\n§GThis spirit is available due to our doctrines.§!"
- superior_firepower_academy_spirit_2_tt:1 "§G50% chance§! that new officers are created with the §Y"Bearer of Artillery"§! trait."
+ superior_firepower_academy_spirit_2_tt:1 "§G50% chance§! that new officers are created with the §Y"Artillery Officer"§! trait."
  theatre_training_spirit:0 "Theatre Training"
  theatre_training_spirit_desc:1 "Some officers may 'go native', but natives are very good at fighting on their chosen terrain.\n\n§GThis spirit is available due to our doctrines.§!"
  theatre_training_academy_spirit_tt:0 "§G50% chance§! that new officers are created with the §Y"Brilliant Strategist"§! or §Y"Inflexible Strategist"§! trait."
