italy and bugfixes

--- a/bicemodded/localisation/english/TW_events_l_english.yml
+++ b/bicemodded/localisation/english/TW_events_l_english.yml
@@ -111,9 +111,9 @@
  
  italy.42.t:0 "Blackshirt Divisions"
  italy.42.d:0 ""Voluntary Militia for National Security", commonly called the Blackshirts, was originally the paramilitary wing of the National Fascist Party. Their methods became harsher as Mussolini's power grew, and they used violence and intimidation against Mussolini's opponents."
- italy.42.a:0 "20 Width"
- italy.42.b:0 "24 Width"
- italy.42.c:0 "30 Width"
+ italy.42.a:0 "20 Width (Full eq)"
+ italy.42.b:0 "20 Width, One light tank battalion (90% eq)"
+ italy.42.c:0 "30 Width (67% eq)"
  
  italy.43.t:0 "Legioni Spedizionarie"
  italy.43.d:0 "Our posters fill every beer hall and pub across europe, eager volunteers have signed up and are being shipped to Spain! Two Militia divisions are ready to be setup by our personel on the ground and will appear in the theatre controlled by Nationalist Spain."
