hidden tech gfx and loc

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -1251,8 +1251,8 @@
  SWI_improve_mountain_training:0 "Improve the Mountain Training"
  SWI_improve_mountain_training_desc:0 "Our Swiss climbers are renowned for their skill and courage, we should put more emphasis on using their expertise to train the new generation of soldiers in mountainous terrain."
  SWI_mountain_training_effect:0 "Enables §HAlpen Training§!\n§HMountain Support Unit\n    Mountain§!\n      Defense: §G+10%§!\n"
- alpen_training:0 "Alpen Training"
- alpen_training_desc:0 "By fully utilising the terrain we can get a defensive advantage."
+ SWI_alpen_training_effect:0 "Alpen Training"
+ SWI_alpen_training_effect_desc:0 "By fully utilising the terrain we can get a defensive advantage."
  SWI_further_motorisation:0 "Further Motorization"
  SWI_further_motorisation_desc:0 "We need to make sure that our army can move quickly enough to close any possible enemy breakthroughs! Being quick enough to exploit openings in the enemy line is also a tempting thought."
  SWI_armed_and_neutral:0 "Armed Neutrality"
