--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -2606,7 +2606,7 @@ USA_social_security_desc:0 "In 1935, Franklin Delano Roosevelt signed into law t
 USA_bonus_bill:0 "Bonus Bill"
 USA_bonus_bill_desc:0 "A bill was introduced in 1924 to provide US Treasury Bonds to veterans from the Great War. At a rate of at least $1 per day of service, this will be costly.  However, many of these bonds cant be redeemed until 1945 so it will not hurt the economy now, but it should be very popular!"
 USA_rural_electrification_act:0 "Rural Electrification Act"
-USA_rural_electrification_act_desc:0 "The Rural Electrification Act will encourage the installation of electrical distribution systems in rural areas by providing federal loans for that purpose."
+USA_rural_electrification_act_desc:0 "The Rural Electrification Act provided federal loans for the purpose of bringing electricity to rural areas, an idea before considered unfeasible due to the range of powerlines only being 4 miles.  With these loans, that distance was increased to 40 miles, allowing thousands of homes to see the light quite literally!"
 USA_tennessee_valley_authority:0 "Tennessee Valley Authority"
 USA_tennessee_valley_authority_desc:0 "The TVA was established to provide infrastructure to an area that was largely neglected due to the Great Depression.  This included the constuction of the first and largest federal hydropower agencies in the country, which was later used to produce ~5 million tons of aluminum and many of the components for the Manhatten Project for the war effort."
 USA_aaa:0 "Rural Electrification Administration"
@@ -2617,21 +2617,21 @@ USA_national_resource:0 "National Resource Planning Board"
 USA_national_resource_desc:0 "We must plan out the Resource investments before we actually invest so we don't waste resources in times when resources are very scarce!"
 USA_free_sherman:0 "The Sherman"
 USA_free_sherman_desc:0 "Sherman is an amazing design, it is the pride of America of the 20th Century and upgrading it will be vital in our war effort against the Germans."
-USA_housing_act:0 "Housing Act"
-USA_housing_act_desc:0 "The Housing Act provides subsidized housing to low-income families."
+USA_housing_act:0 "The Housing Act"
+USA_housing_act_desc:0 ""I see one-third of a nation ill-housed, ill-clad, ill-nourished. . . . The test of our progress is not whether we add more to the abundance of those who have much; it is whether we provide enough for those who have too little.” - Franklin Delano Roosevelt"
 housing_act:0 "Agricultural Tech"
 USA_food_stamp_plan:0 "Food Stamp Plan"
-USA_food_stamp_plan_desc:0 "The Food Stamp Plan helps undernourished people afford food."
-USA_bankruptcy_act:0 "Bankruptcy Act"
-USA_bankruptcy_act_desc:0 "The Bankruptcy Act amended the bankruptcy process and expanded voluntary access to the bankruptcy system."
+USA_food_stamp_plan_desc:0 ""We got a picture of a gorge, with farm surpluses on one cliff and under-nourished city folks with outstretched hands on the other. We set out to find a practical way to build a bridge across that chasm." - Milo Perkins"
+USA_bankruptcy_act:0 "Bankruptcy Reform"
+USA_bankruptcy_act_desc:0 "By amending the Bankruptcy Act of 1898, we can attempt to fix the problem of having entire counties go belly-up!  This included the Farm Bankruptcy Act of 1937, the Municipality Bankruptcy Act of 1938, and the Chandler Act of 1938."
 USA_bonneville_project_act:0 "Bonneville Project Administration"
 USA_bonneville_project_act_desc:0 "The Bonneville Project Administration was modeled after the Panama Canal Company, intended to create a "Postage Stamp" rate for electricity, regardless of if the consumer was in a rural or urban environment.  It recommended power be sold at the cost of production rather than a market rate, and that preference be given to public utilities when providing electricity.  This is surely the beginning of rural electrification across America!"
 USA_civil_aeronautics_act:0 "Civil Aeronautics Act"
 USA_civil_aeronautics_act_desc:0 "The Civil Aeronautics Act was passed to foster air commerce, improve safety, and to certify both pilots and aircraft."
 USA_reorganization_act:0 "Reorganization Act"
-USA_reorganization_act_desc:0 "The Reorganization Act expands and reorganizes the executive branch, which gives the president more control over the administration of the country."
+USA_reorganization_act_desc:0 "The first major reorganization since 1787, this allowed the President to create the Executive Office of the President to personally oversee dozens of 3 Letter Agencies, including the WPA, NYA, and the PWA among many others.  4 more years!"
 USA_court_packing:0 "Court Packing"
-USA_court_packing_desc:0 "The Supreme Court is hindering many of the New Deal reforms from passing. While unpopular in Congress, it might be necessary to push through the Judicial Procedures Reform Bill that allows the President to select several new reform-friendly judges for the Supreme Court."
+USA_court_packing_desc:0 "The Supreme Court is hindering many of the New Deal reforms from passing. While unpopular in Congress, it might be necessary to push through the Judicial Procedures Reform Bill to strategically remove the opposition and pave way for judges friendlier to the President's ideas."
 USA_huac:0 "House Committee on Un-American Activities"
 USA_huac_desc:0 "To get information on subversive elements in American society, such as Communists, Fascists, and suspicious Ethnic Minorities, the House of Representatives will form a committee to investigate the matter."
 USA_alien_registration_act:0 "Alien Registration Act"
