bug fixes CA nerf air support doctrine nerf event pics

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -1581,6 +1581,7 @@ italian_focus:0 "Italian National Focus"
  ITA_Learn_from_the_Wehrmacht_desc:0 "The Wehrmacht proved to be a formidable force, we may learn many valuable lessons from the Germans."
  ITA_The_Old_guard:0 "The Old Guard"
  ITA_The_Old_guard_desc:0 "Old generals believe the future of warfare will be an evolution of WW1 land doctrine"
+ ITA_The_Old_guard_tt:0 "You will receive a §Y2 Skill§! §YOld Guard§!, §GInflexible Strategist§! and §GArtillery Officer§! §CCorps Commander§! Pietro Ago.\n"
  ITA_Legacy_of_the_Arditi:0 "Legacy of the Arditi"
  ITA_Legacy_of_the_Arditi_desc:0 "The Arditi were the Italian assault units during the Great War, many of them are now officers and will provide their experience in assault."
  ITA_Heavy_Infantry_Division:0 "Heavy Infantry Division"
