--- a/bicemodded/localisation/english/research_l_english.yml
+++ b/bicemodded/localisation/english/research_l_english.yml
@@ -1663,7 +1663,7 @@
  operational_integrity_tree_research:0 "Operational Integrity Doctrine Research Speed"
  strategic_destruction_tree:0 "Strategic Destruction Doctrine"
  strategic_destruction_tree_research:0 "Strategic Destruction Doctrine Research Speed"
- armor:0 "Armour technology"
+ armor:0 "Armor"
  artillery:0 "Artillery"
  
  cat_panther:0 "Medium/Heavy Tanks(Panther)"
