Added ENG Focus Descriptions

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -2676,7 +2676,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  ENG_peace_time:0 "Peace for Our Time!"
  ENG_peace_time_desc:0 "A new era of peace and mutual trust awaits europe!"
  ENG_polish_guarantee:0 "Anglo-Polish Mutual Assistance Pact"
- ENG_polish_guaranteee_desc:0 "In an attempt to deter revisionist regimes from further aggression, HM Government vows to lend the Polish Government all support in the event any threats to Polish independence, when the Polish Government accordingly considers it vital to resist. In a secret protocol of the pact, our assistance is only guaranteed in the case of an attack on Poland specifically by Germany, but in the case of attack by other countries, we are required only to \"consult together on measures to be taken in common\". This will allow us to avoid military conflict with any other potential aggressors and to focus on Germany. The Poles wouldn't be so amused with this interpretation of the pact though..."
+ ENG_polish_guaranteee_desc:0 "In an attempt to deter revisionist regimes from further aggression, HM Government vows to lend the Polish Government all support in the event any threats to Polish independence, when the Polish Government accordingly considers it vital to resist. In a secret protocol of the pact, our assistance is only guaranteed in the case of an attack on Poland specifically by Germany, but in the case of attack by other countries, we are required only to consult together on measures to be taken in common. This will allow us to avoid military conflict with any other potential aggressors and to focus on Germany. The Poles wouldn't be so amused with this interpretation of the pact though..."
  ENG_try_to_handle_the_king:0 "Handle the new King"
  ENG_try_to_handle_the_king_desc:0 "Our new King has made some poorly-worded political statements, and is living a life that weakens our country. We must stop him! We have also heard that he is often visited by an American woman... we should probably keep an eye on that."
  ENG_house_of_commons:0 "House Of Commons"
@@ -2783,7 +2783,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  ENG_assault_rifle:0 "Assault Rifle Developement"
  ENG_assault_rifle_desc:0 "The assault rifle is the combination of bolt action full-sized rifle and submachine gun into one formidable and versatile weapon. If we can mass produce this to be the main infantry rifle it could have a massive impact on the battlefield!"
  ENG_night_vision:0 "The Invisible Raiders"
- ENG_night_vision_desc:0 ""
+ ENG_night_vision_desc:0 "The Special Boat Service (SBS) has conducted numerous coastal raids and reconnaissance missions against our enemy. From these operations, we can garner experience and apply better night-fighting tactics."
  ENG_all_alliance_tt:0 "The effect activates for §Gall your faction members§!"
  ENG_preparation_time_tt:0 "The effect activates after a §R45 day preparation time§!"
  ENG_war_office:0 "The War Office"
@@ -2963,7 +2963,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
 
  ## ENG air focuses ##
  ENG_air_bases:0 "Airbase Effort"
- ENG_air_bases_desc:0 ""
+ ENG_air_bases_desc:0 "Germany's is quickly ramping up their airforce to levels forbidden by the Treaty of Versailles, we must build airbases to be prepared for the worse, just in case."
  ENG_air_defense:0 "Air Defense"
  air_defense_focus_tt:0 "Set level 2 §YAnti-Air§! in §YEast Anglia§!, §YSussex§! and §YCornwall§!"
  air_defense_focus_bypass_tt:0 "Not enough building slots for §YAnti-Air§!"
@@ -2986,7 +2986,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  ENG_jet_focus:0 "Jet Aircraft"
  ENG_jet_focus_desc:0 "It seems almost certain that the Jet engine will come to replace propeller engines on airplanes. The potential is enormous, and we must not allow Britain to lag behind in this crucial area of research."
  ENG_grand_slam:0 "Grand Slam"
- ENG_grand_slam_desc:0 ""
+ ENG_grand_slam_desc:0 "Our engineers have developed a new weapon. A 22,000 lb capable of penetrating deep underground, and then exploding, creating underground craters that would significantly damage the foundations of buildings, causing them to partially if not totally collapse. We shall call this bomb, the Grand Slam!"
  ENG_military_aviation:0 "RAF Training Schools"
  ENG_military_aviation_desc:0 "It's looking increasingly likely that the Royal Airforce is going to be playing a crucial role in any future war. We must ensure that our pilots have the proper training."
  ENG_expand_raf:0 "The RAF"
@@ -3021,7 +3021,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  uk_battleship_focus:0 "Battleship Focus"
  uk_battleship_focus_desc:0 "While the theorists bicker about air supremacy or naval supremacy, no one wants the guns of a battleship pointing at their palace. Even if the carrier enthusiasts prove right in the end, battleships will still dominate the oceans for years to come."
  ENG_workhorse_navy:0 "Workhorse of The Seas"
- ENG_workhorse_navy_desc:0 ""
+ ENG_workhorse_navy_desc:0 "The only thing connecting us to the rest of our empire is the ocean. To protect this lifeline, we must develop and produce new destroyers to ensure that this connection isn't broken."
  ENG_dds_tt:0 "Get a fleet screening §Ydestroyer§! design on the §C1939 light hull§!: 'Weapon Class'"
  ENG_dds_tt2:0 "Get an escort §Ydestroyer§! design on the §C1939 light hull§!: 'Hunt Class'"
  ENG_dds_tt3:0 "Get a minewarfare §Ydestroyer§! design on the §C1939 light hull§!: 'Abdiel Class'\n \n"
@@ -3077,7 +3077,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  ENG_cruiser_tanks:0 "Cruising Matilda - Cruiser Tanks"
 
  ENG_attack_sia:0 "Seize Siam"
- ENG_attack_sia_desc:0 ""
+ ENG_attack_sia_desc:0 "Siam's location serves as an important staging ground from which the Japanese can use to attack our colonies through Burma and the Malay Penisula. We must preemptively strike and secure this strategicly valuable position."
  ENG_protocol:0 "Rebel Spirit"
  ENG_protocol_desc:0 "Following the death of King George V on January 20th 1936 Edward ascended the throne. His rebellious nature became apparently visible as he broke the royal protocol by watching the proclamation of his own accession from a window of St. James's Palace, in the company of the still-married Wallis Simpson."
  ENG_test_fly:0 "Spitfire Test Flight"
@@ -3106,11 +3106,11 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  elite_mountaineers_tt: "Receive a well-trained §YMountaineers§! division.\n"
 
  ENG_heavy_tanks:0 "New Tank Prototypes"
- ENG_heavy_tanks_desc:0 ""
+ ENG_heavy_tanks_desc:0 "It is clear that our doctrine of infantry tanks and cavalry tanks isn't working. Our tanks are either too weak, or too slow. To solve this, we must think of new designs not only strong enough to create breakthroughs, but also fast enough to exploit them."
  ENG_firefly:0 "Firefly"
- ENG_firefly_desc:0 ""
- ENG_armored_warfare:0 "Armored Mobile Warfare"
- ENG_armored_warfare_desc:0 ""
+ ENG_firefly_desc:0 "We need a way to counter heavily armoured German tanks such as the Tiger. Fortunately for us, the Americans have a very modifiable tank we might be able to attach a 17-pounder anti-tank gun on. It can penetrate up to 150mm from 1,000 meters away! Overkill? There's no such thing."
+ ENG_armoured_warfare:0 "Armoured Mobile Warfare"
+ ENG_armoured_warfare_desc:0 "Our deployment and usage of tanks is still inadequate in comparison to the Germans, we must learn from their blitzkrieg tactics while developing our radios so we can better coordinate our armoured offensives."
 
  ENG_valentine:0 "Operation Valentine"
  ENG_valentine_desc:0 "Following the invasion and occupation of Denmark on 9 April 1940, British forces launched "Operation Valentine" to occupy the Faroe Islands. On 12 April, two destroyers of the British Royal Navy arrived in Tórshavn harbour.250 Royal Marines were disembarked, later to be replaced by other British troops."
