--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -111,6 +111,8 @@
  JAP_Zaibatsu_Idea_Bonus_desc:0 "The Zaibatsu are large industrial conglomerates, which can sometimes trace their origins several hundred years back."
  JAP_Zaibatsu_Idea_Bonus_2:0 "Zaibatsus"
  JAP_Zaibatsu_Idea_Bonus_2_desc:0 "The Zaibatsu are large industrial conglomerates, which can sometimes trace their origins several hundred years back."
+ license_air_equipment:0 "Airplane License Bonus"
+ license_air_equipment_desc:0 ""
  ITA_ARMIR_1:0 "Unprepared for Eastern Front"
  ITA_ARMIR_1_desc:0 "We are unprepared for the vast and brutal large scale battles on the eastern front and our logistics system is nowhere near the capabilities required to transport our troops and resources the 1000's of km .
  ITA_ARMIR_2:0 "Setup ARMIR"
