--- a/bicemodded/localisation/english/equip_naval_l_english.yml
+++ b/bicemodded/localisation/english/equip_naval_l_english.yml
@@ -17,9 +17,6 @@
  carrier_desc:0 "A capital ship able to carry wings of powerful carrier capable aircraft into battle. Also useful as a floating airfield you can position off the coast of your enemy."
  light_carrier:0 "£ship_light_carrier_icon_small Light Carrier"
  light_carrier_desc:0 "A less capable but more affordable version of the Aircraft Carrier, designed primarily for convoy protection and escorting more valuable warships."
- ecarrier:0 "£ship_light_carrier_icon_small Escort Carrier"
- scarrier:0 "Armored Carrier"
- escort_carrier:0 "£ship_light_carrier_icon_small Escort Carrier"
  battleship:0 "£ship_battleship_icon_small Battleship"
  battleship_desc:0 "The largest capital ship with the biggest guns and strongest armor that money can buy. Such an expensive investment deserves proper support of smaller screening ships."
  battle_cruiser:0 "£ship_battle_cruiser_icon_small Battlecruiser"
@@ -1968,5 +1965,5 @@ SIA_sh_battleship_2_desc:0 "An improvement on our earlier super heavy design wit
  ship_hull_super_heavy_2_desc:0 "The current state of the world no longer has any room for abiding by naval treaties. Without these limitations, we can focus entirely on creating the heaviest, most well-armed battleships of all time, able to engage multiple lesser vessels."
  ship_hull_cruiser_submarine:0 "Cruiser Submarine"
  ship_hull_cruiser_submarine_desc:0 "A larger submarine hull optimized for longer range. Can be equipped with additional fuel tanks for even more range, or a small scout airplane."
- screen_ship:0 "Screens"
- capital_ship:0 "Capital Ships"
+ screen_ship:0 "£ship_light_cruiser_icon_small Screens"
+ capital_ship:0 "£ship_battleship_icon_small Capital Ships"
