event pics mostly

--- a/bicemodded/localisation/english/TW_events_l_english.yml
+++ b/bicemodded/localisation/english/TW_events_l_english.yml
@@ -128,8 +128,8 @@
  italy.45.a:0 "Put out the Fire!"
 
  
- italy.46.t:0 "Haile Selassie adressing The League of Nations"
- italy.46.d:0 "On 30 June, Selassie spoke at the League of Nations and was introduced by the President of the Assembly as "His Imperial Majesty, the Emperor of Ethiopia". The Romanian chairman, Nicolae Titulescu, jumped to his feet and shouted "Show the savages the door!" Selassie denounced Italian aggression and criticised the world community for standing by. At the conclusion of his speech, which appeared on newsreels throughout the world, he said "It is us today. It will be you tomorrow"."
+ italy.46.t:0 "Selassie denounces Italy's aggression at League of Nations"
+ italy.46.d:0 "With the outbreak of the Italo-Abyssinian war, the Emperor of Ethiopia Haile Selassie spoke at the League of Nations and was introduced by the President of the Assembly as "His Imperial Majesty". The Romanian chairman, Nicolae Titulescu, jumped to his feet and shouted "Show the savages the door!" Selassie denounced the Italian aggression and criticised the world community for standing by. At the conclusion of his speech, which appeared on newsreels throughout the world, he said "It is us today. It will be you tomorrow"."
  italy.46.a:0 "We can't let this distract us"
  
  ITA_abyssinia_campaign:0 "Abyssinia Campaign Momentum"
@@ -201,6 +201,15 @@
  italy.67.t:0 "War against Russia"
  italy.67.d:0 "We are now in a state of war against the vast Soviet Union. Some say it would be irresponsible to send a poorly prepared, ill-equipped, and inadequately armed military force to the Russian Front. It is said that the terrain and climate is far worse than what our alliance had anticipated and the transportation of our equipment to the theatre is larger than any undertaking we have drawn up plans for. Mussolini believes that a small expeditionary force should still be sent in all haste to spearhead the quick advance towards Moscow for propaganda purposes."
  italy.67.a:0 "Gulp!"
+ 
+ italy.68.t:0 "Pact of Steel"
+ italy.68.d:0 "Germany and Italy have signed a non-aggression pact to aid the other country militarily, economically or otherwise in the event of war, and to collaborate in wartime production and in the production of steel."
+ italy.68.a:0 "Yes!"
+ italy.68.b:0 "What are they up to?"
+ 
+ italy.69.t:0 "Naval Reform Finished"
+ italy.69.d:0 "."
+ italy.69.a:0 "Yes!"
  
  news.348.t:0 "The Second Stresa Front"
  news.348.d:0 "Faced with what they considered to be a "rising German threat", the Italian, French and British governments met again in the city of Stresa to announce the re-creation of the Front of the same name, which had been broken following the Italian invasion of the Abyssinia. In exchange, the French and British governments agreed to lift the embargoes on Italy.\n\nTheir aim is to maintain the territorial integrity of Austria against the German Reich, as well as to ensure that the latter respects the Treaty of Versailles. "
