--- a/bicemodded/localisation/english/decisions_TW_l_english.yml
+++ b/bicemodded/localisation/english/decisions_TW_l_english.yml
@@ -141,7 +141,7 @@
  ITA_guernica:0 "Bombing of Guernica"
  ITA_guernica_desc:0 "The bombing of Guernica (26 April 1937) was an aerial attack on the Basque town of Guernica, causing widespread destruction and civilian deaths during the Spanish Civil War. The raid by planes of the Nazi German Luftwaffe "Condor Legion" and the Italian Fascist Aviazione Legionaria was called Operation Rügen."
  ITA_navy_reform:0 "Navy Reform of 1938"
- ITA_navy_reform_desc:0 "After a series of large scale exercises the navy reforms have been completed!"
+ ITA_navy_reform_desc:0 "After a series of large scale exercises the navy reforms can be completed!"
  ITA_operations:0 "Italian Operations"
  ITA_operations_desc:0 "Italian operations undertaken during World War II"
  ITA_seize_syria:0 "Seize Syria"
