mp feedback: fix terrain lower base surrender limit

--- a/bicemodded/localisation/english/cara_ideas_l_english.yml
+++ b/bicemodded/localisation/english/cara_ideas_l_english.yml
@@ -25,7 +25,7 @@
  bayern_cars:0 "BMW"
  bayern_cars_desc:0 "Construction machines"
  autarchy:0 "Recycling "
- autarchy_desc:0 "We have to keep an eye on our resourcemanagement that we can archieve the best results!"
+ autarchy_desc:0 "We have to improve our resource waste management to achieve the best results!"
  idea_hitleryouth:0 "Hitlerjugend"
  idea_hitleryouth_desc:0 "A new generation of hardened warriors will carry the torch"
  secured_supply:0 "Secured supply"
